# conex

./: .gitignore  CHANGELOG.md  PR24-PR25-REFLECTION.md  README.md  SPEC-V2.md  fresh-session-summary.md  pyproject.toml
.dev-loop/: PLAN.md  PROMPT.md  REVIEW.md
.github/workflows/: ci.yml
docs/: cme-markdown-transformation-gaps.md
src/conex/: __init__.py  __main__.py  build.py  cli.py  config.py  drawio.py  errors.py  gitio.py  http.py  layout.py  models.py  paths.py  pull.py
src/conex/api/: __init__.py  v1.py  v2.py
src/conex/convert/: __init__.py  macros.py  registry.py  render.py
src/conex/store/: __init__.py  blobs.py  lock.py  state.py
src/confluence_export/: __init__.py  __main__.py  cache.py  cli.py  client.py  config.py  converter.py  diagnostics.py  diff.py  drawio.py  exporter.py  filemode.py  git.py  layout.py  media.py  paths.py  protection.py  provenance.py  reconcile.py  tree.py  types.py  validation.py
tests/: conftest.py  test_auth_fallback.py  test_cache.py  test_cli_commands.py  test_client.py  test_cme_transform_parity.py  test_collisions.py  test_config.py  test_converter.py  test_converter_extra.py  test_diagnostics.py  test_diff.py  test_drawio.py  test_drawio_extra.py  test_exporter.py  test_git.py  test_layout.py  test_media.py  test_moves.py  test_parallel.py  test_paths.py  test_protection.py  test_provenance.py  test_reconcile.py  test_tree.py  test_types.py  test_validation.py
tests_v2/: fake_api.py  test_api_v1.py  test_api_v2.py  test_blobs.py  test_build.py  test_cli.py  test_config.py  test_convert_core.py  test_convert_macros.py  test_drawio.py  test_e2e.py  test_gitio.py  test_http.py  test_layout.py  test_lock.py  test_models.py  test_paths.py  test_pull.py  test_state.py
