[project]
name = "confluence-export"
version = "0.1.0"
description = "LLM-ready Confluence page tree exporter"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "markdownify>=0.11",
    "pyyaml>=6.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
confluence-export = "confluence_export.cli:main"
conex = "conex.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/confluence_export", "src/conex"]

[tool.pytest.ini_options]
testpaths = ["tests", "tests_v2"]

[tool.coverage.run]
# __main__.py is the `python -m confluence_export` entrypoint (a bare main() call);
# it is never imported under test, so exclude it from coverage rather than fake it.
omit = ["*/__main__.py"]
