[project]
name = "conex"
version = "2.0.0"
description = "conex — LLM-ready Confluence page tree exporter"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "markdownify>=0.11",
    "pyyaml>=6.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
conex = "conex.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conex"]

[tool.pytest.ini_options]
testpaths = ["tests_v2"]

[tool.coverage.run]
# __main__.py is the `python -m conex` entrypoint (a bare main() call); it is
# never imported under test, so exclude it from coverage rather than fake it.
omit = ["*/__main__.py"]
